# ai-sl2

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  PANDUAN_LENGKAP.md  README.md  SETUP.md  START_HERE.txt  USE_CASES.md  arduino_sensor_example.ino  docker-compose.yml  iot_integration.py  main copy.py  pyproject.toml  rekomendasi.py  requirements.txt  run.sh  test_system.py
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  logger.py
app/routes/: ai.py  data.py  pollution.py
app/services/: gemini_client.py  perplexity_client.py  pollution_analyzer.py  rag_engine.py  sheets_reader.py
app/utils/: helpers.py
fe/: index.html  script.js
tests/: test_config_and_errors.py
