[project]
requires-python = ">=3.9"
name = "groq-ml-api"
version = "0.2.0"
description = "FastAPI Machine Learning API with Groq Integration"
authors = [
    { name = "Your name", email = "you@example.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "requests>=2.32.0",
    "loguru>=0.7.3",
    "joblib>=1.4.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.3",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "groq>=0.11.0",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "autopep8>=2.3.0",
    "ipdb>=0.13.13",
    "pylint>=3.3.0",
    "mypy>=1.13.0"
]
aws = [
    "mangum>=0.18.0"
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]